<resources>
    <string name="app_name">Wedvites</string>
    <string name="content_desc_splash">splash image</string>
    <string name="btn_signup">Register</string>
    <string name="btn_google">Google</string>
    <string name="btn_facebook">Facebook</string>
    <string name="facebook_app_id">395711250861411</string>
    <string name="fb_login_protocol_scheme">fb395711250861411</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_login">or Login</string>
    <string name="title_register">or Register</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_user">Profile</string>
    <string name="text_invitation">Invitation</string>
    <string name="err_email">Enter valid email</string>
    <string name="err_password">Password should be at least 6 characters!</string>
    <string name="err_password_match">Password should match</string>
    <string name="btn_login">Login</string>
    <string name="txt_forgot_password">Forgot Password?</string>
    <string name="submit">Submit</string>
</resources>
