<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_gallery"
        android:enabled="true"
        android:icon="@drawable/selector_gallery"
        android:title="@string/text_gallery"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_user"
        android:enabled="true"
        android:icon="@drawable/selector_user"
        android:title="@string/text_user"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_invitation"
        android:enabled="true"
        android:icon="@drawable/selector_invitation"
        android:title="@string/text_invitation"
        app:showAsAction="ifRoom" />
</menu>