<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.andigeeky.weddinginvitation.view.vo.Action" />

        <variable
            name="login"
            type="com.andigeeky.weddinginvitation.view.vo.Login" />

        <variable
            name="handlers"
            type="com.andigeeky.weddinginvitation.view.fragments.LoginFragment.Handler" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_sign_up"
        android:fillViewport="true"
        android:scrollbars="none">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:mActivity="com.andigeeky.weddinginvitation.view.LoginActivity">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_email">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/txt_forgot_password"
                style="@style/PinkFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/txt_forgot_password"
                android:visibility="@{(login.action == Action.ACTION_LOGIN)? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintEnd_toEndOf="parent"
                android:onClick="@{handlers::onClickForgotPassword}"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_pwd" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edt_confirm_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:visibility="@{(login.action == Action.ACTION_LOGIN)? View.INVISIBLE : View.VISIBLE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_pwd">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textPassword"
                    tools:fontFamily="@font/actor" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btn_register"
                style="@style/MediumFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/bg_light_rounded_rectangle"
                android:onClick="@{handlers::onClickEmail}"
                android:text="@{login.textButton}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_confirm_pwd" />

            <Button
                android:id="@+id/btn_google"
                style="@style/MediumFont"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:background="@drawable/logo_google_option1"
                android:onClick="@{handlers::onClickGoogle}"
                app:layout_constraintStart_toEndOf="@+id/btn_toggle"
                app:layout_constraintTop_toTopOf="@+id/btn_toggle" />

            <Button
                android:id="@+id/btn_facebook"
                style="@style/MediumFont"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/logo_facebook_option1"
                android:onClick="@{handlers::onClickFacebook}"
                app:layout_constraintStart_toEndOf="@+id/btn_google"
                app:layout_constraintTop_toTopOf="@+id/btn_toggle" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center"
                android:src="@drawable/icon"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintEnd_toStartOf="@+id/textView" />

            <TextView
                android:id="@+id/textView"
                style="@style/MediumFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="120dp"
                android:fontFamily="@font/pacifico"
                android:text="@string/app_name"
                android:textSize="@dimen/title_sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_toggle"
                style="@style/MediumFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/bg_light_right_rounded_rectangle"
                android:onClick="@{handlers::onClickLogin}"
                android:paddingEnd="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingStart="20dp"
                android:text="@{login.textToggle}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_register" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>